WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188914
libwebrtc PeerConnection::AddTrack sometimes fail
https://bugs.webkit.org/show_bug.cgi?id=188914
Summary
libwebrtc PeerConnection::AddTrack sometimes fail
youenn fablet
Reported
2018-08-23 22:17:58 PDT
In plan B, passing two stream IDs is failing. This should be reported through the API.
Attachments
Patch
(11.97 KB, patch)
2018-08-23 22:20 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(12.07 KB, patch)
2018-08-24 11:16 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-08-23 22:20:50 PDT
Created
attachment 347988
[details]
Patch
youenn fablet
Comment 2
2018-08-24 11:16:16 PDT
Created
attachment 348024
[details]
Patch
WebKit Commit Bot
Comment 3
2018-08-24 12:30:35 PDT
Comment on
attachment 348024
[details]
Patch Clearing flags on attachment: 348024 Committed
r235327
: <
https://trac.webkit.org/changeset/235327
>
WebKit Commit Bot
Comment 4
2018-08-24 12:30:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-08-24 12:31:25 PDT
<
rdar://problem/43693502
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug